--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ orbs:
 jobs:
   test:
     executor: docker/machine
+    working_directory: ~/project
     steps:
       - checkout
       - docker/check
@@ -14,12 +15,25 @@ jobs:
       - run:
           name: Test built Docker image
           command: |
+            CONTAINER=cimg-puppeteer
+            WORKING_DIR=/home/circleci/project
+
             docker run \
+              --detach \
               --init \
-              --name cimg-puppeteer \
-              --mount type=bind,source="$(pwd)"/test,target=/home/circleci/project \
+              --privileged \
+              --tty \
+              --name $CONTAINER \
+              --user circleci:circleci \
               cimg-puppeteer:$CIRCLE_SHA1 \
-              bash ./test.sh
+              bash
+            docker cp ./test/. $CONTAINER:$WORKING_DIR
+            docker exec $CONTAINER pwd
+            docker exec $CONTAINER sudo chown -R $USER: .
+            docker exec $CONTAINER sudo chmod +x ./test.sh
+            docker exec $CONTAINER ./test.sh
+            docker kill $CONTAINER
+            docker rm $CONTAINER
 
 workflows:
   test:
