--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
 
   test:
     executor: machine
-    # parallelism: 4
+    parallelism: 4
     working_directory: ~/project
     steps:
       - checkout
@@ -50,7 +50,7 @@ jobs:
 
   build-and-publish:
     executor: machine
-    # parallelism: 4
+    parallelism: 4
     working_directory: ~/project
     steps:
       - checkout
