--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,7 @@ workflows:
     jobs:
       - get-tags
       - test:
+          context: DOCKER_CREDENTIALS
           requires:
             - get-tags
 
