--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ jobs:
   get-tags:
     docker:
       - image: cimg/base:2020.11
+        auth:
+          username: $DOCKER_LOGIN
+          password: $DOCKER_PASSWORD
     working_directory: ~/project
     steps:
       - checkout
@@ -62,6 +65,9 @@ jobs:
   shellcheck:
     docker:
       - image: koalaman/shellcheck-alpine:v0.7.1
+        auth:
+          username: $DOCKER_LOGIN
+          password: $DOCKER_PASSWORD
     working_directory: ~/project
     steps:
       - checkout
@@ -106,8 +112,10 @@ workflows:
   test:
     jobs:
       - docker/hadolint
-      - shellcheck
-      - get-tags
+      - shellcheck:
+          context: DOCKER_CREDENTIALS
+      - get-tags:
+          context: DOCKER_CREDENTIALS
       - test:
           context: DOCKER_CREDENTIALS
           requires:
@@ -115,7 +123,8 @@ workflows:
 
   release:
     jobs:
-      - get-tags
+      - get-tags:
+          context: DOCKER_CREDENTIALS
       - publish:
           context: DOCKER_CREDENTIALS
           requires:
